  L'affichage de ces tableaux peut être désactivé dans Gérer mon compte.
  Affichage pour le professeur principal du tableau de l'ouverture d'accès parents/élèves 
  aux avis et appréciations pour ses classes.
- Possibilité d'ouvrir l'accès parent/élève aux appréciations et avis élève par
  élève (pour les établissements dans lesquels les bulletins sont remis en mains 
  propres aux familles).

Cahiers de textes:
- Possibilité de définir des Tag (Contrôle, EPI, AP) pour les notices de CDT.

Absences2:
- Affichage des manquements du jour sur la page d'accueil simplifiée parent.
- Possibilité de ne pas afficher par défaut les saisies englobées ou traitées.
- Possibilité d'afficher un rappel des absences non justifiées depuis un certain temps.

Discipline:
- Ajout de droits extractDiscProf et extractDiscProfP pour les accès professeur 
  et professeur principal à l'export ODS des incidents.
- Possibilité d'extraire un bilan ODS par période avec chiffrage, avec choix des types de sanction,...
- Sanctions du jour: Possibilité de tri sur le tableau des sanctions non effectuées.
- Possibilité de définir des modèles spécifiques pour des types de sanctions particuliers.
- Possibilité d'afficher (et extraire en CSV) les sanctions de la semaine et non plus seulement du jour.

Engagements:
- Possibilité d'afficher les engagements sur les pages Equipe pédago.

Accueil élèves et parents
- en page résumé, ne pas afficher l'aide sur les devoirs si le module cahier de texte n'est pas ouvert.

Statistiques:
- Ajout de l'extraction des sous-groupes ne concernant qu'une classe.
- Possibilité d'exporter l'établissement d'origine dans l'export de Bulletins.

Orientation:
- Ajout d'un module orientation pour saisir les voeux d'orientation et l'orientation conseillée.
  Les voeux et orientations proposées peuvent être affichées sur les bulletins PDF.

Général:
- Affichage de l'identité de la personne qui suit la classe (chef, adjoint)